# PATY

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile.bot  LICENSE  README.md  audio_io.py  docker-compose.yml  example.env  fly.toml  llm.py  main.py  mkdocs.yml  participant.json  prompts.py  pyproject.toml  stt.py  tts.py  vad.py
.claude/: settings.local.json
.github/workflows/: cli_tests.yml  deploy-docs.yml  deploy.yml  pipecat_outbound_tests.yml  publish.yml  release.yml  ruff.yml  tests.yml  ui-tests.yml  userland-on-merge.yml  userland-post-publish.yml  userland-pre-merge.yml
agent/: __init__.py  prompt.py  protocol.py  server.py
agent/simulator/: __init__.py  engine.py
cli/: README.md  pyproject.toml
cli/examples/: paty-pak.yaml  paty.yaml
cli/paty/: __init__.py  __main__.py  cli.py
cli/paty/bus/: __init__.py  codec.py  events.py  observer.py  server.py  tail.py
cli/paty/config/: loader.py  schema.py
cli/paty/dashboard/: __init__.py  audio_observer.py  collectors.py  provider.py  snapshot.py
cli/paty/examples/: paty-pak.yaml
cli/paty/hardware/: detect.py  profiles.py
cli/paty/metrics/: observer.py  setup.py
cli/paty/pak/: __init__.py  loader.py  registry.py  runtime.py  schema.py
cli/paty/paks/nova/: pak.yaml  soul.md
cli/paty/paks/nova/avatar/: idle.txt  listening.txt  speaking.txt  thinking.txt
cli/paty/paks/paty/: pak.yaml  soul.md
cli/paty/paks/paty/avatar/: idle.txt  listening.txt  speaking.txt  thinking.txt
cli/paty/pipeline/: builder.py  local_audio.py  mute.py  text_input.py
cli/paty/resolve/: registry.py  resolver.py
cli/paty/runtime/: gpu_executor.py  manager.py  stt_service.py  tts_service.py
cli/paty/startup/: __init__.py  boot_screen.py  launcher.py
cli/paty/tracing/: setup.py
cli/paty/tui/: __init__.py  app.py  conversation.py  layout.py  styles.tcss  theme.py
cli/paty/tui/widgets/: __init__.py  avatar.py  equalizer.py  input.py  latency_chart.py  logo.py  logs.py  transcript.py
cli/paty/utils/: env.py
cli/tests/: test_avatar.py  test_bus.py  test_collectors.py  test_config.py  test_hardware.py  test_metrics.py  test_mute.py  test_pak_cli.py  test_pak_loader.py  test_pak_registry.py  test_pak_runtime.py  test_pak_schema.py  test_resolver.py  test_text_input.py  test_tracing.py  test_tui_dispatch.py
cli/tests/userland/: test_smoke.py
docs/: CNAME  index.md
docs/reference/: caller.md  protocol.md
docs/reference/providers/: daily.md  telnyx.md  websocket_base.md
mcp/: .env.example  Dockerfile  fly.toml  pyproject.toml
mcp/src/: __init__.py  server.py  transcript.html
mcp/src/vault/: __init__.py  crypto.py  database.py  manager.py
mcp/ui/: index.html  package-lock.json  package.json  playwright.config.ts  test-local.mjs  vite.config.ts
mcp/ui/src/: App.tsx  index.css  main.tsx
mcp/ui/tests/: transcript.spec.ts
pipecat_outbound/: __init__.py  bot.py  caller.py  protocol.py  server.py  telephony.yaml
pipecat_outbound/providers/: daily.py  telnyx.py  websocket_base.py
pipecat_outbound/simulator/: __init__.py  engine.py  scenario.py
scripts/: agent.sh  deploy-bot.sh  deploy-fly.sh  deploy-mcp.sh  deploy-voice.sh  dev-install.sh  get-mcp-config.sh  setup-fly.sh  setup-gcp.sh
secrets-mcp/: README.md
src/: agent.py  make_call.py
tauri/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
tauri/src/: main.ts  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: lib.rs  main.rs
tests/: README.md  conftest.py
tests/http/: conftest.py  test_call_composer.py
tests/simulator/: assertions.py  conftest.py  harness.py  test_human_conversation.py  test_ivr_navigation.py  test_waveform_ivr.py
tests/simulator/scenarios/: bank_account_ivr.yaml  doctor_appointment_ivr.yaml  insurance_agent_human.yaml  insurance_claims_ivr.yaml
tests/smoke/: test_deployments.py  test_outbound_calls.py  test_web.py
tests/unit/: test_caller.py  test_protocol.py
tests/unit/providers/: test_daily.py  test_websocket.py
tests/unit/vault/: test_crypto.py  test_database.py  test_manager.py
voice/: .dockerignore  .env.example  pyproject.toml
voice/src/: __init__.py  agent.py
voice/tests/: __init__.py  test_agent.py
web/: Caddyfile  Dockerfile  fly.toml  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/sign-in/[[...sign-in]]/: page.tsx
web/app/sign-up/[[...sign-up]]/: page.tsx
web/static/: index.html
web/static/assets/: style.css
