[project]
name = "pipecat-outbound"
version = "0.1.0"
description = "PATY Outbound: Telephony routing and dispatch for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "pipecat-ai>=0.0.1", 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "aioresponses>=0.7.6",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: marks tests as smoke tests (deselect with '-m \"not smoke\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["pipecat_outbound"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"] # pycodestyle errors, pyflakes, isort
ignore = []

[tool.ruff.isort]
known-first-party = ["pipecat_outbound"]
