[project]
name = "paty"
dynamic = ["version"]
description = "PATY — Declarative voice agent deployment on Pipecat"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Shea Hawkins", email = "shea@paty.ai" }]
keywords = ["voice", "assistant", "pipecat", "llm", "stt", "tts", "voice-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ruamel.yaml>=0.18",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pipecat-ai[local,silero,openai]",
    "websockets>=12.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "numpy>=1.24",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.optional-dependencies]
mlx = [
    "pipecat-ai[whisper,silero]",
    "mlx-lm>=0.20",
    "mlx-audio>=0.2",
    "misaki[en]<0.9",
]
cuda = [
    "pipecat-ai[whisper,silero]",
    "llama-cpp-python",
]
cpu = [
    "pipecat-ai[whisper,silero]",
    "llama-cpp-python",
]
otlp = ["opentelemetry-exporter-otlp>=1.20"]
prometheus = ["opentelemetry-exporter-prometheus>=0.50b0"]
eject = ["jinja2>=3.0"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/PATYai/PATY"
Repository = "https://github.com/PATYai/PATY"
Issues = "https://github.com/PATYai/PATY/issues"

[project.scripts]
paty = "paty.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "paty/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["paty"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/userland"
markers = [
    "userland: end-to-end tests against the installed `paty` binary",
    "merge: subset of userland tests run on every merge to main",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["paty/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["paty"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
