[package]
name = "paty-tauri"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "paty_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
